<resources>
    <string name="app_name">Review System</string>
    <string name="previousimage">PreviousImage</string>
    <string name="add_review">Add Review</string>
    <string name="designation">Designation</string>
    <string name="current_exp">Current Exp</string>
    <string name="previous_exp">Previous Exp</string>
    <string name="strength">Strength</string>
    <string name="weakness">Weakness</string>
    <string name="performance">Performance</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="submit">Submit</string>
    <string name="select_account_type">Select account type</string>
    <string name="login">Login</string>
    <string name="company">Company</string>
    <string name="employee">Employee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="it_services">IT Services</string>
    <string name="banking">Banking</string>
    <string name="telecom">Telecom</string>
    <string name="marketing">Marketing</string>
    <string name="logistics_amp_supplychain">Logistics &amp; Supplychain</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="show_more">Show More</string>
    <string name="e_commerce">E-Commerce</string>
    <string name="finance_amp_markege">Finance &amp; Markege</string>
    <string name="password">Password</string>
    <string name="search_by_domin">SEARCH BY DOMIN</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="today">TODAY</string>
    <string name="older">OLDER</string>
    <string name="title_activity_employee_bottom_navigation">EmployeeBottomNavigation</string>
    <string name="fresher">Fresher</string>
</resources>