<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color">

    <android.support.v7.widget.CardView
        android:id="@+id/AddReviewCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddReviewDetailsToolbar">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/FirstNameTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:gravity="center|start"
                android:text="@string/first_name"
                android:textColor="@color/black_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/FirstNameEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameTv" />

            <TextView
                android:id="@+id/LastnameTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="center|start"
                android:text="@string/last_name"
                android:textColor="@color/black_color"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/FirstNameEditTxt" />

            <EditText
                android:id="@+id/LastNameEditTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LastnameTxtView" />

            <TextView
                android:id="@+id/emailTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="center|start"
                android:text="@string/Email"
                android:textColor="@color/black_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LastNameEditTxt" />

            <EditText
                android:id="@+id/EmailidEditTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailTv" />

            <TextView
                android:id="@+id/PhoneTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="8dp"
                android:gravity="center|start"
                android:text="@string/phone_number"
                android:textColor="@color/black_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/EmailidEditTxt" />

            <EditText
                android:id="@+id/PhoneNoEditTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/PhoneTxtView" />


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/NextBtn"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/lightgreen_gradient"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddReviewCardView" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/AddReviewDetailsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/AddReviewDetailBackArrowImageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_back_arrow"/>

        <TextView
            android:id="@+id/AddReviewDetailsTxtview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_review"
            android:textColor="@color/white_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"/>
    </android.support.v7.widget.Toolbar>
</android.support.constraint.ConstraintLayout>