<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navyblue_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Account"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/select_account_type"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ViewProfile1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bluegradient_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Account" />

    <ImageView
        android:id="@+id/CompanyImage"
        android:layout_width="95dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_employee1"
        app:layout_constraintBottom_toBottomOf="@+id/ViewProfile1"
        app:layout_constraintEnd_toEndOf="@+id/ViewProfile1"
        app:layout_constraintStart_toStartOf="@+id/ViewProfile1"
        app:layout_constraintTop_toTopOf="@+id/ViewProfile1"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/CompanyLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/whitegradient"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toEndOf="@+id/CompanyImage"
        app:layout_constraintTop_toBottomOf="@+id/Account" />

    <TextView
        android:id="@+id/CompanyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/company"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewProfile1" />

    <View
        android:id="@+id/ViewProfile2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bluegradient_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CompanyText" />

    <ImageView
        android:id="@+id/EmployeeImage"
        android:layout_width="98dp"
        android:layout_height="95dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/ViewProfile2"
        app:layout_constraintEnd_toEndOf="@+id/ViewProfile2"
        app:layout_constraintStart_toStartOf="@+id/ViewProfile2"
        app:layout_constraintTop_toTopOf="@+id/ViewProfile2"
        app:srcCompat="@drawable/ic_manager_icon"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/EmployeeLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/whitegradient"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/black_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/EmployeeImage"
        app:layout_constraintTop_toBottomOf="@+id/CompanyText"
        app:layout_constraintVertical_bias="0.047" />

    <TextView
        android:id="@+id/EmployeeTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/employee"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewProfile2"
        app:layout_constraintVertical_bias="0.066" />

</android.support.constraint.ConstraintLayout>